--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "third_party/zstd"]
 	path = third_party/zstd
 	url = https://github.com/facebook/zstd.git
+[submodule "third_party/magic_enum"]
+	path = third_party/magic_enum
+	url = git@github.com:Neargye/magic_enum.git
