Added Wrapper Class for Table to store column dist

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -24,6 +24,8 @@ set(
     concurrency/transaction_manager.hpp
     constant_mappings.cpp
     constant_mappings.hpp
+    cost_calibration/calibration_table_wrapper.cpp
+    cost_calibration/calibration_table_wrapper.hpp
     cost_calibration/table_generator.cpp
     cost_calibration/table_generator.hpp
     cost_estimation/abstract_cost_estimator.cpp
