--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -27,10 +27,9 @@ set(
     cost_calibration/calibration_table_wrapper.cpp
     cost_calibration/calibration_table_wrapper.hpp
     cost_calibration/table_generator.cpp
-    cost_calibration/table_generator.h
+    cost_calibration/table_generator.hpp
     cost_calibration/lqp_generator/abstract_lqp_generator.cpp
     cost_calibration/lqp_generator/abstract_lqp_generator.hpp
-
     cost_calibration/lqp_generator/table_scan.cpp
     cost_calibration/lqp_generator/table_scan.hpp
     cost_calibration/table_generator.hpp
