Added operator export class

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -26,6 +26,8 @@ set(
     constant_mappings.hpp
     cost_calibration/measurement_export.cpp
     cost_calibration/measurement_export.hpp
+    cost_calibration/operator_export.cpp
+    cost_calibration/operator_export.hpp
     cost_estimation/abstract_cost_estimator.cpp
     cost_estimation/abstract_cost_estimator.hpp
     cost_estimation/cost_estimator_logical.cpp
