Improve size estimation of string segments (#1968)
* Initial

* Add missing files

* Clean up

* Fix

* :trollface:

* Add table for chunk sort orders.

* Change names

* Clean up

* GCC ist doof

* Format and lint

* Removed index stuff

* Fix

* Review

* Review

* Remove default mode

* Fix, lint, format

* changes

* Initial

* Remove default parameter

* Fix table name. One test issue remaining

* Use multi chunk binary

* Review

* GCC müffelt manchmal doll

* pmr string

* Change sampling and fix wrong type used in sizeof()

* Whoopsie.

* Sublime Merge müffelt. Macht keinen Spaß.

* Use accurate string estimation also in run length encoding

* Commit temp

* Clean up

* Gnade dir Gott, wenn ich dich in die Finger kriege GCC ...

* Clang format and fix typo

* Fix console test

* Change lambda name

* Review

* Adapt comment

* Formatting and test fix

* Change int distribution to use size_t

* Fix valgrind

Co-authored-by: mrks <markus@dreseler.de>

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -575,6 +575,7 @@ set(
     utils/sqlite_add_indices.hpp
     utils/sqlite_wrapper.cpp
     utils/sqlite_wrapper.hpp
+    utils/size_estimation_utils.hpp
     utils/string_utils.cpp
     utils/string_utils.hpp
     utils/template_type.hpp
