Beginning to test AntiCachingPlugin

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -31,7 +31,7 @@ endfunction(add_plugin)
 add_plugin(NAME MvccDeletePlugin SRCS mvcc_delete_plugin.cpp mvcc_delete_plugin.hpp)
 add_plugin(NAME hyriseTestPlugin SRCS test_plugin.cpp test_plugin.hpp)
 add_plugin(NAME hyriseTestNonInstantiablePlugin SRCS non_instantiable_plugin.cpp)
-add_plugin(NAME AntiCachingPlugin SRCS anti_caching_plugin.cpp anti_caching_plugin.hpp)
+add_plugin(NAME AntiCachingPlugin SRCS anti_caching_plugin.cpp anti_caching_plugin.hpp knapsack_solver.cpp knapsack_solver.hpp)
 
 
 # We define TEST_PLUGIN_DIR to always load plugins from the correct directory for testing purposes
