--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -128,6 +128,7 @@ set(
     optimizer/strategy/strategy_base_test.cpp
     optimizer/strategy/strategy_base_test.hpp
     optimizer/strategy/subquery_to_join_rule_test.cpp
+    plugins/anti_caching_plugin_test.cpp
     plugins/mvcc_delete_plugin_test.cpp
     scheduler/scheduler_test.cpp
     server/mock_socket.hpp
@@ -226,6 +227,7 @@ set(
     gmock
     sqlite3
     MvccDeletePlugin  # So that we can test member methods without going through dlsym
+    AntiCachingPlugin
 )
 
 # This warning does not play well with SCOPED_TRACE
