--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(
 
     playground.cpp
 )
+target_link_libraries_system(hyrisePlayground nlohmann_json::nlohmann_json)
 
 target_link_libraries(
     hyrisePlayground
