--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -135,6 +135,7 @@ set(
     scheduler/scheduler_test.cpp
     server/mock_socket.hpp
     server/postgres_protocol_handler_test.cpp
+    server/transaction_handling_test.cpp
     server/query_handler_test.cpp
     server/read_buffer_test.cpp
     server/result_serializer_test.cpp
