--- a/src/calibration/CMakeLists.txt
+++ b/src/calibration/CMakeLists.txt
@@ -2,6 +2,8 @@
 add_executable(
     hyriseCalibration
 
+    benchmark_builder.cpp
+    benchmark_builder.hpp
     calibration.cpp
     calibration_table_wrapper.cpp
     calibration_table_wrapper.hpp
