add plugins meta table

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -566,6 +566,8 @@ set(
     utils/meta_table_manager.hpp
     utils/meta_tables/abstract_meta_table.cpp
     utils/meta_tables/abstract_meta_table.hpp
+    utils/meta_tables/meta_plugins_table.cpp
+    utils/meta_tables/meta_plugins_table.hpp
     utils/pausable_loop_thread.cpp
     utils/pausable_loop_thread.hpp
     utils/performance_warning.cpp
