add MetaTableManager test

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -574,6 +574,8 @@ set(
     utils/meta_tables/meta_chunks_table.hpp
     utils/meta_tables/meta_columns_table.cpp
     utils/meta_tables/meta_columns_table.hpp
+    utils/meta_tables/meta_mock_table.cpp
+    utils/meta_tables/meta_mock_table.hpp
     utils/meta_tables/meta_plugins_table.cpp
     utils/meta_tables/meta_plugins_table.hpp
     utils/meta_tables/meta_segments_table.cpp
