Some Cleanup Things (#2016)
Couple of things that came up while working on the TPC-H Paper.

    The JSON library was linked pretty much everywhere, but not in the playground. As a result, generating TPC-H data was not possible. I changed its linkage to public. Let me know if you'd prefer for someone else to review the cmake stuff.
    Clarify that PosLists marked as guarantee_single_chunk must not contain NULL values, fixes #1983.
    The ChunkPruningRule was executed twice.
    The Non-FullCI runs did not skip the ODR step.

No relevant performance difference for TPC-H.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -249,7 +249,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(hyriseTest ${HYRISE_UNIT_TEST_SOURCES})
 add_dependencies(hyriseTest hyriseTestPlugin hyriseTestNonInstantiablePlugin)
 target_link_libraries(hyriseTest hyrise ${LIBRARIES})
-target_link_libraries_system(hyriseTest nlohmann_json::nlohmann_json)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 target_compile_options(hyriseTest PUBLIC -Xclang -fno-pch-timestamp)
@@ -266,6 +265,6 @@ endif()
 
 # Configure hyriseSystemTest
 add_executable(hyriseSystemTest ${SYSTEM_TEST_SOURCES})
-target_link_libraries(hyriseSystemTest hyrise hyriseBenchmarkLib ${LIBRARIES})
-target_link_libraries_system(hyriseSystemTest nlohmann_json::nlohmann_json pqxx_static)
+target_link_libraries(hyriseSystemTest PUBLIC hyrise hyriseBenchmarkLib ${LIBRARIES})
+target_link_libraries_system(hyriseSystemTest pqxx_static)
 target_compile_options(hyriseSystemTest PRIVATE -DPQXX_HIDE_EXP_OPTIONAL)
