--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -133,6 +133,8 @@ set(
     logical_query_plan/import_node.hpp
     logical_query_plan/insert_node.cpp
     logical_query_plan/insert_node.hpp
+    logical_query_plan/intersect_node.cpp
+    logical_query_plan/intersect_node.hpp
     logical_query_plan/join_node.cpp
     logical_query_plan/join_node.hpp
     logical_query_plan/limit_node.cpp
