Segment access counters (#1995)
This PR provides segments with the possibility to keep track of how many times they were accessed and what access pattern was used. This is done by the caller (iterator, accessor) executing the corresponding function of the segment’s counter.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -181,6 +181,7 @@ set(
     storage/multi_segment_index_test.cpp
     storage/prepared_plan_test.cpp
     storage/reference_segment_test.cpp
+    storage/segment_access_counter_test.cpp
     storage/segment_accessor_test.cpp
     storage/segment_iterators_test.cpp
     storage/simd_bp128_test.cpp
