apply more feedback

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -203,9 +203,13 @@ set(
     utils/format_duration_test.cpp
     utils/lossless_predicate_cast_test.cpp
     utils/meta_table_manager_test.cpp
+    utils/meta_tables/meta_mock_table.cpp
+    utils/meta_tables/meta_mock_table.hpp
     utils/meta_tables/meta_table_test.cpp
     utils/meta_tables/meta_plugins_test.cpp
     utils/meta_tables/meta_settings_test.cpp
+    utils/mock_setting.hpp
+    utils/mock_setting.cpp
     utils/plugin_manager_test.cpp
     utils/plugin_test_utils.cpp
     utils/plugin_test_utils.hpp
