Added template tests for all calibration classes

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -14,6 +14,13 @@ set(
     benchmarklib/sqlite_add_indices_test.cpp
     benchmarklib/table_builder_test.cpp
     cache/cache_test.cpp
+    calibration/calibration_benchmark_runner_test.cpp
+    calibration/calibration_table_generator_test.cpp
+    calibration/calibration_table_wrapper_test.cpp
+    calibration/csv_writer_test.cpp
+    calibration/lqp_generator_test.cpp
+    calibration/operator_feature_export_test.cpp
+    calibration/table_feature_export_test.cpp
     concurrency/commit_context_test.cpp
     concurrency/transaction_context_test.cpp
     concurrency/transaction_manager_test.cpp
