add benchmark-interfaces to hyrisePlayground

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -14,6 +14,8 @@ add_executable(
     hyrisePlayground
 
     playground.cpp
+    clustering/benchmark_parsers.cpp
+    clustering/benchmark_parsers.hpp
 )
 
 target_link_libraries(
