Forgot to add the cpp files -- again.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -481,7 +481,9 @@ set(
     storage/pos_lists/abstract_pos_list.hpp
     storage/pos_lists/abstract_pos_list.cpp
     storage/pos_lists/matches_all_pos_list.hpp
+    storage/pos_lists/matches_all_pos_list.cpp
     storage/pos_lists/rowid_pos_list.hpp
+    storage/pos_lists/rowid_pos_list.cpp
     storage/prepared_plan.cpp
     storage/prepared_plan.hpp
     storage/reference_segment.cpp
