--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -485,6 +485,7 @@ set(
     storage/pos_lists/rowid_pos_list.hpp
     storage/pos_lists/rowid_pos_list.cpp
     storage/pos_lists/single_chunk_pos_list.hpp
+    storage/pos_lists/single_chunk_pos_list.cpp
     storage/prepared_plan.cpp
     storage/prepared_plan.hpp
     storage/reference_segment.cpp
