[WIP] add meta tables

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -583,8 +583,12 @@ set(
     utils/meta_tables/meta_chunks_table.hpp
     utils/meta_tables/meta_columns_table.cpp
     utils/meta_tables/meta_columns_table.hpp
+    utils/meta_tables/meta_operators_table.cpp
+    utils/meta_tables/meta_operators_table.hpp
     utils/meta_tables/meta_plugins_table.cpp
     utils/meta_tables/meta_plugins_table.hpp
+    utils/meta_tables/meta_queries_table.cpp
+    utils/meta_tables/meta_queries_table.hpp
     utils/meta_tables/meta_segments_accurate_table.cpp
     utils/meta_tables/meta_segments_accurate_table.hpp
     utils/meta_tables/meta_segments_table.cpp
