Separated calibration executable and lib classes

--- a/src/calibration/CMakeLists.txt
+++ b/src/calibration/CMakeLists.txt
@@ -1,28 +1,16 @@
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 # Configure calibration
 add_executable(
     hyriseCalibration
 
-    calibration_benchmark_runner.cpp
-    calibration_benchmark_runner.hpp
     calibration.cpp
-    calibration_table_wrapper.cpp
-    calibration_table_wrapper.hpp
-    csv_writer.cpp
-    csv_writer.hpp
-        calibration_lqp_generator.cpp
-        calibration_lqp_generator.hpp
-    operator_feature_export.cpp
-    operator_feature_export.hpp
-    table_feature_export.cpp
-    table_feature_export.hpp
-    calibration_table_generator.cpp
-    calibration_table_generator.hpp
 )
 
 target_link_libraries(
     hyriseCalibration
     hyrise
-    hyriseBenchmarkLib
+    hyriseCalibrationLib
 )
 
 target_link_libraries_system(hyriseCalibration nlohmann_json::nlohmann_json)
