--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -601,8 +601,10 @@ set(
     utils/plugin_manager.cpp
     utils/plugin_manager.hpp
     utils/print_directed_acyclic_graph.hpp
-    utils/settings/abstract_setting.hpp
     utils/settings/abstract_setting.cpp
+    utils/settings/abstract_setting.hpp
+    utils/settings/log_level_setting.cpp
+    utils/settings/log_level_setting.hpp
     utils/settings_manager.cpp
     utils/settings_manager.hpp
     utils/singleton.hpp
