--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -574,6 +574,8 @@ set(
     utils/list_directory.hpp
     utils/load_table.cpp
     utils/load_table.hpp
+    utils/log_manager.cpp
+    utils/log_manager.hpp
     utils/lossless_predicate_cast.cpp
     utils/lossless_predicate_cast.hpp
     utils/make_bimap.hpp
@@ -587,6 +589,8 @@ set(
     utils/meta_tables/meta_chunks_table.hpp
     utils/meta_tables/meta_columns_table.cpp
     utils/meta_tables/meta_columns_table.hpp
+    utils/meta_tables/meta_log_table.cpp
+    utils/meta_tables/meta_log_table.hpp
     utils/meta_tables/meta_plugins_table.cpp
     utils/meta_tables/meta_plugins_table.hpp
     utils/meta_tables/meta_segments_accurate_table.cpp
@@ -606,8 +610,8 @@ set(
     utils/plugin_manager.cpp
     utils/plugin_manager.hpp
     utils/print_directed_acyclic_graph.hpp
-    utils/settings/abstract_setting.hpp
     utils/settings/abstract_setting.cpp
+    utils/settings/abstract_setting.hpp
     utils/settings_manager.cpp
     utils/settings_manager.hpp
     utils/singleton.hpp
